--- a/dev_notebooks/Check_Dataset_Record_Consistency.ipynb
+++ b/dev_notebooks/Check_Dataset_Record_Consistency.ipynb
@@ -9,137 +9,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "############################################################\n",
       "Checking for inconsistency in record types\n",
-      "Missing diffusiondb, tree_ring, distortion_single_rotation, 3.0, reverse\n",
-      "Missing diffusiondb, tree_ring, distortion_single_rotation, 3.0, decode\n",
-      "Missing diffusiondb, tree_ring, 4x_regen, 2.0, decode\n",
-      "Missing diffusiondb, tree_ring, distortion_combo_degradation, 0.02, decode\n",
-      "Missing diffusiondb, tree_ring, distortion_single_resizedcrop, 0.85, decode\n",
-      "Missing diffusiondb, tree_ring, distortion_single_rotation, 1.0, decode\n",
-      "Missing diffusiondb, tree_ring, distortion_single_resizedcrop, 0.95, decode\n",
-      "Missing diffusiondb, tree_ring, 4x_regen, 1.0, decode\n",
-      "Missing diffusiondb, tree_ring, distortion_single_rotation, 3.0, metric\n",
-      "Missing diffusiondb, tree_ring, 4x_regen, 2.0, metric\n",
-      "Missing diffusiondb, tree_ring, distortion_combo_degradation, 0.02, metric\n",
-      "Missing diffusiondb, tree_ring, distortion_single_resizedcrop, 0.85, metric\n",
-      "Missing diffusiondb, tree_ring, distortion_single_rotation, 1.0, metric\n",
-      "Missing diffusiondb, tree_ring, distortion_single_resizedcrop, 0.95, metric\n",
-      "Missing diffusiondb, tree_ring, 4x_regen, 1.0, metric\n",
-      "Missing diffusiondb, stable_sig, distortion_single_rotation, 3.0, decode\n",
-      "Missing diffusiondb, stable_sig, 4x_regen, 2.0, decode\n",
-      "Missing diffusiondb, stable_sig, distortion_combo_degradation, 0.02, decode\n",
-      "Missing diffusiondb, stable_sig, distortion_single_resizedcrop, 0.85, decode\n",
-      "Missing diffusiondb, stable_sig, distortion_single_rotation, 1.0, decode\n",
-      "Missing diffusiondb, stable_sig, distortion_single_resizedcrop, 0.95, decode\n",
-      "Missing diffusiondb, stable_sig, 4x_regen, 1.0, decode\n",
-      "Missing diffusiondb, stable_sig, distortion_single_rotation, 3.0, metric\n",
-      "Missing diffusiondb, stable_sig, 4x_regen, 2.0, metric\n",
-      "Missing diffusiondb, stable_sig, distortion_combo_degradation, 0.02, metric\n",
-      "Missing diffusiondb, stable_sig, distortion_single_resizedcrop, 0.85, metric\n",
-      "Missing diffusiondb, stable_sig, distortion_single_rotation, 1.0, metric\n",
-      "Missing diffusiondb, stable_sig, distortion_single_resizedcrop, 0.95, metric\n",
-      "Missing diffusiondb, stable_sig, 4x_regen, 1.0, metric\n",
-      "Missing diffusiondb, stegastamp, distortion_single_rotation, 3.0, decode\n",
-      "Missing diffusiondb, stegastamp, 4x_regen, 2.0, decode\n",
-      "Missing diffusiondb, stegastamp, distortion_combo_degradation, 0.02, decode\n",
-      "Missing diffusiondb, stegastamp, distortion_single_resizedcrop, 0.85, decode\n",
-      "Missing diffusiondb, stegastamp, distortion_single_rotation, 1.0, decode\n",
-      "Missing diffusiondb, stegastamp, distortion_single_resizedcrop, 0.95, decode\n",
-      "Missing diffusiondb, stegastamp, 4x_regen, 1.0, decode\n",
-      "Missing diffusiondb, stegastamp, distortion_single_rotation, 3.0, metric\n",
-      "Missing diffusiondb, stegastamp, 4x_regen, 2.0, metric\n",
-      "Missing diffusiondb, stegastamp, distortion_combo_degradation, 0.02, metric\n",
-      "Missing diffusiondb, stegastamp, distortion_single_resizedcrop, 0.85, metric\n",
-      "Missing diffusiondb, stegastamp, distortion_single_rotation, 1.0, metric\n",
-      "Missing diffusiondb, stegastamp, distortion_single_resizedcrop, 0.95, metric\n",
-      "Missing diffusiondb, stegastamp, 4x_regen, 1.0, metric\n",
-      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.85, reverse\n",
-      "Missing mscoco, tree_ring, distortion_combo_degradation, 0.02, reverse\n",
-      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.95, reverse\n",
-      "Missing mscoco, tree_ring, distortion_single_rotation, 3.0, reverse\n",
-      "Missing mscoco, tree_ring, distortion_single_rotation, 3.0, decode\n",
-      "Missing mscoco, tree_ring, 4x_regen, 2.0, decode\n",
-      "Missing mscoco, tree_ring, distortion_combo_degradation, 0.02, decode\n",
-      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.85, decode\n",
-      "Missing mscoco, tree_ring, distortion_single_rotation, 1.0, decode\n",
-      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.95, decode\n",
-      "Missing mscoco, tree_ring, 4x_regen, 1.0, decode\n",
-      "Missing mscoco, tree_ring, distortion_single_rotation, 3.0, metric\n",
-      "Missing mscoco, tree_ring, 4x_regen, 2.0, metric\n",
-      "Missing mscoco, tree_ring, distortion_combo_degradation, 0.02, metric\n",
-      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.85, metric\n",
-      "Missing mscoco, tree_ring, distortion_single_rotation, 1.0, metric\n",
-      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.95, metric\n",
-      "Missing mscoco, tree_ring, 4x_regen, 1.0, metric\n",
-      "Missing mscoco, stable_sig, distortion_single_rotation, 3.0, decode\n",
-      "Missing mscoco, stable_sig, 4x_regen, 2.0, decode\n",
-      "Missing mscoco, stable_sig, distortion_combo_degradation, 0.02, decode\n",
-      "Missing mscoco, stable_sig, distortion_single_resizedcrop, 0.85, decode\n",
-      "Missing mscoco, stable_sig, distortion_single_rotation, 1.0, decode\n",
-      "Missing mscoco, stable_sig, distortion_single_resizedcrop, 0.95, decode\n",
-      "Missing mscoco, stable_sig, 4x_regen, 1.0, decode\n",
-      "Missing mscoco, stable_sig, distortion_single_rotation, 3.0, metric\n",
-      "Missing mscoco, stable_sig, 4x_regen, 2.0, metric\n",
-      "Missing mscoco, stable_sig, distortion_combo_degradation, 0.02, metric\n",
-      "Missing mscoco, stable_sig, distortion_single_resizedcrop, 0.85, metric\n",
-      "Missing mscoco, stable_sig, distortion_single_rotation, 1.0, metric\n",
-      "Missing mscoco, stable_sig, distortion_single_resizedcrop, 0.95, metric\n",
-      "Missing mscoco, stable_sig, 4x_regen, 1.0, metric\n",
-      "Missing mscoco, stegastamp, distortion_single_rotation, 3.0, decode\n",
-      "Missing mscoco, stegastamp, 4x_regen, 2.0, decode\n",
-      "Missing mscoco, stegastamp, distortion_combo_degradation, 0.02, decode\n",
-      "Missing mscoco, stegastamp, distortion_single_resizedcrop, 0.85, decode\n",
-      "Missing mscoco, stegastamp, distortion_single_rotation, 1.0, decode\n",
-      "Missing mscoco, stegastamp, distortion_single_resizedcrop, 0.95, decode\n",
-      "Missing mscoco, stegastamp, 4x_regen, 1.0, decode\n",
-      "Missing mscoco, stegastamp, distortion_single_rotation, 3.0, metric\n",
-      "Missing mscoco, stegastamp, 4x_regen, 2.0, metric\n",
-      "Missing mscoco, stegastamp, distortion_combo_degradation, 0.02, metric\n",
-      "Missing mscoco, stegastamp, distortion_single_resizedcrop, 0.85, metric\n",
-      "Missing mscoco, stegastamp, distortion_single_rotation, 1.0, metric\n",
-      "Missing mscoco, stegastamp, distortion_single_resizedcrop, 0.95, metric\n",
-      "Missing mscoco, stegastamp, 4x_regen, 1.0, metric\n",
-      "Missing dalle3, tree_ring, distortion_single_rotation, 3.0, reverse\n",
-      "Missing dalle3, tree_ring, distortion_single_rotation, 3.0, decode\n",
-      "Missing dalle3, tree_ring, 4x_regen, 2.0, decode\n",
-      "Missing dalle3, tree_ring, distortion_combo_degradation, 0.02, decode\n",
-      "Missing dalle3, tree_ring, distortion_single_resizedcrop, 0.85, decode\n",
-      "Missing dalle3, tree_ring, distortion_single_rotation, 1.0, decode\n",
-      "Missing dalle3, tree_ring, distortion_single_resizedcrop, 0.95, decode\n",
-      "Missing dalle3, tree_ring, distortion_single_rotation, 3.0, metric\n",
-      "Missing dalle3, tree_ring, 4x_regen, 2.0, metric\n",
-      "Missing dalle3, tree_ring, distortion_combo_degradation, 0.02, metric\n",
-      "Missing dalle3, tree_ring, distortion_single_resizedcrop, 0.85, metric\n",
-      "Missing dalle3, tree_ring, distortion_single_rotation, 1.0, metric\n",
-      "Missing dalle3, tree_ring, distortion_single_resizedcrop, 0.95, metric\n",
-      "Missing dalle3, tree_ring, 4x_regen, 1.0, metric\n",
-      "Missing dalle3, stable_sig, distortion_single_rotation, 3.0, decode\n",
-      "Missing dalle3, stable_sig, 4x_regen, 2.0, decode\n",
-      "Missing dalle3, stable_sig, distortion_combo_degradation, 0.02, decode\n",
-      "Missing dalle3, stable_sig, distortion_single_resizedcrop, 0.85, decode\n",
-      "Missing dalle3, stable_sig, distortion_single_rotation, 1.0, decode\n",
-      "Missing dalle3, stable_sig, distortion_single_resizedcrop, 0.95, decode\n",
-      "Missing dalle3, stable_sig, distortion_single_rotation, 3.0, metric\n",
-      "Missing dalle3, stable_sig, 4x_regen, 2.0, metric\n",
-      "Missing dalle3, stable_sig, distortion_combo_degradation, 0.02, metric\n",
-      "Missing dalle3, stable_sig, distortion_single_resizedcrop, 0.85, metric\n",
-      "Missing dalle3, stable_sig, distortion_single_rotation, 1.0, metric\n",
-      "Missing dalle3, stable_sig, distortion_single_resizedcrop, 0.95, metric\n",
-      "Missing dalle3, stable_sig, 4x_regen, 1.0, metric\n",
-      "Missing dalle3, stegastamp, distortion_single_rotation, 3.0, decode\n",
-      "Missing dalle3, stegastamp, 4x_regen, 2.0, decode\n",
-      "Missing dalle3, stegastamp, distortion_combo_degradation, 0.02, decode\n",
-      "Missing dalle3, stegastamp, distortion_single_resizedcrop, 0.85, decode\n",
-      "Missing dalle3, stegastamp, distortion_single_rotation, 1.0, decode\n",
-      "Missing dalle3, stegastamp, distortion_single_resizedcrop, 0.95, decode\n",
-      "Missing dalle3, stegastamp, distortion_single_rotation, 3.0, metric\n",
-      "Missing dalle3, stegastamp, 4x_regen, 2.0, metric\n",
-      "Missing dalle3, stegastamp, distortion_combo_degradation, 0.02, metric\n",
-      "Missing dalle3, stegastamp, distortion_single_resizedcrop, 0.85, metric\n",
-      "Missing dalle3, stegastamp, distortion_single_rotation, 1.0, metric\n",
-      "Missing dalle3, stegastamp, distortion_single_resizedcrop, 0.95, metric\n",
-      "Missing dalle3, stegastamp, 4x_regen, 1.0, metric\n"
+      "############################################################\n",
+      "############################################################\n",
+      "Total number of missing records: 0\n"
      ]
     }
    ],
@@ -148,8 +21,9 @@
     "\n",
     "\n",
     "record_keys_per_dataset_source = {}\n",
-    "print(\"#\" * 60)\n",
     "print(\"Checking for inconsistency in record types\")\n",
+    "print(\"#\" * 60)\n",
+    "count = 0\n",
     "for dataset_name in DATASET_NAMES.keys():\n",
     "    for source_name in WATERMARK_METHODS.keys():\n",
     "        record_keys_per_result_type = {}\n",
@@ -180,12 +54,15 @@
     "                set.union(*record_keys_per_result_type.values())\n",
     "                - record_keys_per_result_type[result_type]\n",
     "            ):\n",
+    "                count += 1\n",
     "                print(\n",
     "                    f\"Missing {dataset_name}, {source_name}, {attack_name}, {attack_strength}, {result_type}\"\n",
     "                )\n",
     "        record_keys_per_dataset_source[(dataset_name, source_name)] = set.union(\n",
     "            *record_keys_per_result_type.values()\n",
-    "        )"
+    "        )\n",
+    "print(\"#\" * 60)\n",
+    "print(f\"Total number of missing records: {count}\")"
    ]
   },
   {
@@ -197,23 +74,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Checking for inconsistency across datasetes and sources\n",
       "############################################################\n",
-      "Checking for inconsistency across datasetes and sources\n"
+      "############################################################\n",
+      "Total number of missing records: 0\n"
      ]
     }
    ],
    "source": [
-    "print(\"#\" * 60)\n",
     "print(\"Checking for inconsistency across datasetes and sources\")\n",
+    "print(\"#\" * 60)\n",
+    "count = 0\n",
     "for dataset_name in DATASET_NAMES.keys():\n",
     "    for source_name in WATERMARK_METHODS.keys():\n",
     "        for attack_name, attack_strength in (\n",
     "            set.union(*record_keys_per_dataset_source.values())\n",
     "            - record_keys_per_dataset_source[(dataset_name, source_name)]\n",
     "        ):\n",
+    "            count += 1\n",
     "            print(\n",
     "                f\"Missing {dataset_name}, {source_name}, {attack_name}, {attack_strength}\"\n",
-    "            )"
+    "            )\n",
+    "print(\"#\" * 60)\n",
+    "print(f\"Total number of missing records: {count}\")"
    ]
   }
  ],
